# agent-ia-diversidade

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
bot/: bot.py  handlers.py  main.py
resources/prompts/: inspector.yaml
resources/scripts/: init.sh
src/: main.py
src/agent/: inspector.py
src/agent/config/: __init__.py  llm.py  settings.py
src/bot/: bot.py  handlers.py
src/shared/: logger.py
