[project]
name = "agent-ia-diversidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.7",
    "langchain-google-genai>=4.2.5",
    "langchain-openrouter>=0.2.3",
    "telebot>=0.0.5",
]
